set projects to 3 wide

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   	<link rel="stylesheet" href="css/style.css">
 
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-  	<link rel="shortcut icon" href="img/WDD logo black.jpg">
+  	<link rel="shortcut icon" href="img/logo black.jpg">
 </head>
 
 <body>
@@ -31,14 +31,27 @@
 				<img src="img/rexxu Showcase.png">
 			</div>
 
-			<div id="subheader">Reimagine Expectations</div>
+			<div id="subheader">Rex Hou Shun Xu</div>
 		</header>
 
 		<main>
             <div class="container">
 
                 <a target="_blank" href="http://www.gooogle.com" class="button">Learn More</a>
-                <div class="semester">Projects</div>
+                <div class="sectiontitle">Projects</div>
+
+                <div class="item">
+                    <a target="_blank" href="http://www.gooogle.com">
+                        <img src="img/rexxu Logo.jpg">
+                    </a>
+                    <div class="description">
+                        <div class="title">Fake Project</div>
+                        <div class="by">July 5, 2018</div>
+                        <div class="view-site">
+                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="item">
                     <a target="_blank" href="http://www.gooogle.com">
@@ -71,7 +84,20 @@
             <div class="container">
 
                 <a target="_blank" href="http://www.gooogle.com" class="button">Learn More</a>
-                <div class="semester">Projects</div>
+                <div class="sectiontitle">Projects</div>
+
+                <div class="item">
+                    <a target="_blank" href="http://www.gooogle.com">
+                        <img src="img/rexxu Logo.jpg">
+                    </a>
+                    <div class="description">
+                        <div class="title">Fake Project</div>
+                        <div class="by">July 5, 2018</div>
+                        <div class="view-site">
+                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="item">
                     <a target="_blank" href="http://www.gooogle.com">
