added link to inven

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section class="title">
     <div class="content">
         <div class="b-wordmark"></div>
-        <h1>Student Technology Services</h1>
+        <h1>Student Technology Services Internal Tools</h1>
     </div>
 </section>
 
@@ -170,6 +170,10 @@
             </tr>
         </table>
         -->
+        <h1>Inventory Management</h1>
+        <div class="content">
+            <a href="https://services.housing.berkeley.edu/inven/" class="home-link">Inventory Tool</a>
+        </div>
 
     </div>
 </section>
@@ -180,7 +184,7 @@
             <img src="./University of California Berkeley Student Technology Services_files/logo-ucberkeley-white.png" alt="University of California Berkeley">
         </a>
 
-        <div class="copyright">Copyright © UC Regents; all rights reserved</div>
+
     </div>
 </footer>
 
