--- a/index.html
+++ b/index.html
@@ -21,20 +21,56 @@
   <div class="sectiontitle">Student Technology Services Internal Tools</div>
 </header>
 
-
 <section class="main">
     <div class="container">
 
-        <div class="sectionsubtitle">Admin Manage</div>
+      <div class="sectionsubtitle">Network Devices</div>
+      <form action="https://stsapps.berkeley.edu/cgi-bin/prot/devices/view" method="GET">
+          <table class="data-display">
+              <tbody>
+              <tr>
+                  <td scope="row">Location Name</td>
+                  <td>
+                      <select name="unit">
+                          <option value="0">Choose a Unit</option>
+                          <option value="1">Unit 1</option>
+                          <option value="2">Unit 2</option>
+                          <option value="3">Unit 3, Cleary, Manville</option>
+                          <option value="4">Unit 4</option>
+                          <option value="5">CKC</option>
+                          <option value="6">UVA</option>
+                          <option value="7">RSSB</option>
+                          <option value="100">ALL - by name</option>
+                          <option value="101">ALL - by IP</option>
+                      </select>
+                  </td>
+                  <td scope="row" colspan="6">Switch Name or IP</td>
+                  <td><input type="TEXT" name="device" size="24" maxsize="24" ></td>
 
+              </tr>
+              <tr>
+                  <td scope="col" colspan="6">
+                      <a class="textbutton" href="https://stsapps.berkeley.edu/cgi-bin/prot/devices/subnets" >List/Edit Subnets </a>
+                      <!-- <a class="textbutton" href="/cgi-bin/prot/devices/bootstrap">New Device</a> -->
+                      <!-- <a class="textbutton" href="/cgi-bin/prot/devices/where-is">Locate Current Port</a> -->
+                      <a class="textbutton" href="https://stsapps.berkeley.edu/cgi-bin/prot/devices/vlan_configs">List/Edit Vlan Configs</a>
+                  </td>
+
+              </tr>
+        <tr>
+                  <td colspan="2" scope="col">
+                      <input type="SUBMIT" value="View" name="SUBMIT4" class="button">
+                      <input type="SUBMIT" value="Print" name="print" class="button">
+                  </td>
+              </tr>
+          </tbody></table>
+      </form>
+
+        <div class="sectionsubtitle">Resident Lookup</div>
         <form action="https://stsapps.berkeley.edu/cgi-bin/prot/users/nr" method="GET">
             <table class="data-display">
-                <thead>
+                <tbody>
                 <tr>
-                    <th colspan="6" scope="col">Lookup Resident (by one or more fields)</th>
-                </tr>
-                </thead>
-                <tbody><tr>
                     <td scope="row">SID</td>
                     <td><input type="TEXT" name="sid" size="24" maxsize="24"></td>
                     <td scope="row">CID</td>
@@ -92,59 +128,11 @@
             </tbody></table>
         </form>
 
-        <form action="https://stsapps.berkeley.edu/cgi-bin/prot/devices/view" method="GET">
-            <table class="data-display">
-                <thead>
-                <tr>
-                    <th scope="col" colspan="6">Network Devices</th>
-                </tr>
-                </thead>
-                <tbody><tr>
-                    <td scope="row" colspan="3">Unit</td>
-                    <td>
-                        <select name="unit">
-                            <option value="0">Choose a Unit</option>
-                            <option value="1">Unit 1</option>
-                            <option value="2">Unit 2</option>
-                            <option value="3">Unit 3, Cleary, Manville</option>
-                            <option value="4">Unit 4</option>
-                            <option value="5">CKC</option>
-                            <option value="6">UVA</option>
-                            <option value="7">RSSB</option>
-                            <option value="100">ALL - by name</option>
-                            <option value="101">ALL - by IP</option>
-                        </select>
-                    </td>
-                    <td scope="row" colspan="6">Switch Name or IP</td>
-                    <td><input type="TEXT" name="device" size="24" maxsize="24" ></td>
 
-                </tr>
-                <tr>
-                    <td scope="col" colspan="6">
-                        <a class="textbutton" href="https://stsapps.berkeley.edu/cgi-bin/prot/devices/subnets" >List/Edit Subnets </a>
-                        <!-- <a class="textbutton" href="/cgi-bin/prot/devices/bootstrap">New Device</a> -->
-                        <!-- <a class="textbutton" href="/cgi-bin/prot/devices/where-is">Locate Current Port</a> -->
-                        <a class="textbutton" href="https://stsapps.berkeley.edu/cgi-bin/prot/devices/vlan_configs">List/Edit Vlan Configs</a>
-                    </td>
-
-                </tr>
-    			<tr>
-                    <td colspan="2" scope="col">
-                        <input type="SUBMIT" value="View" name="SUBMIT4" class="button">
-                        <input type="SUBMIT" value="Print" name="print" class="button">
-                    </td>
-                </tr>
-            </tbody></table>
-        </form>
         <div class="sectionsubtitle">STS NetReg Observation Tool (SNOT)</div>
 
         <form action="https://stsapps.berkeley.edu/internal/apps/netreg/lookup" method="GET">
             <table class="data-display">
-                <thead>
-                <tr>
-                    <th colspan="6" scope="col">Lookup NetReg ICR (by one field)</th>
-                </tr>
-                </thead>
                 <tbody><tr><td scope="row">Numeric CalNet UID</td><td><input name="uid"></td></tr>
                 <tr><td scope="row">MAC Address</td><td><input name="mac"></td></tr>
             </tbody></table>
