Created nav bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   	<title>rexxu Showcase</title>
 
   	<!-- css -->
-  	<link rel="stylesheet" href="css/base.css">
   	<link rel="stylesheet" href="css/style.css">
 
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
@@ -27,107 +26,19 @@
 	<div class="wrapper">
 
 		<header>
-			<div id="logo">
-				<img src="img/rexxu Showcase.png">
-			</div>
+			<a href="#" id="logo"></a>
+      <nav>
+        <a href="#" id ="menu-icon"></a>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
 
-			<div id="subheader">Rex Hou Shun Xu</div>
 		</header>
 
-		<main>
-            <div class="container">
 
-                <a target="_blank" href="rexhoushunxu.github.io/profile" class="button">Learn More</a>
-                <div class="sectiontitle">Access</div>
-
-                <div class="item">
-                    <a target="_blank" href="rexhoushunxu.github.io/patchpage">
-                        <img src="img/StudentTech.jpg">
-                    </a>
-                    <div class="description">
-                        <div class="title">STS Tools</div>
-                        <div class="by">Front End for Limited STS Tools</div>
-                        <div class="view-site">
-                            <a target="_blank" href="rexhoushunxu.github.io/patchpage">View Site</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <a target="_blank" href="http://www.gooogle.com">
-                        <img src="img/rexxu Logo.jpg">
-                    </a>
-                    <div class="description">
-                        <div class="title">Fake Project</div>
-                        <div class="by">July 5, 2018</div>
-                        <div class="view-site">
-                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <a target="_blank" href="http://www.gooogle.com">
-                        <img src="img/rexxu Logo.jpg">
-                    </a>
-                    <div class="description">
-                        <div class="title">Fake Project</div>
-                        <div class="by">July 5, 2018</div>
-                        <div class="view-site">
-                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div><!-- container -->
-
-            <div class="container">
-
-                <a target="_blank" href="http://www.gooogle.com" class="button">Learn More</a>
-                <div class="sectiontitle">Projects</div>
-
-                <div class="item">
-                    <a target="_blank" href="http://www.gooogle.com">
-                        <img src="img/rexxu Logo.jpg">
-                    </a>
-                    <div class="description">
-                        <div class="title">Fake Project</div>
-                        <div class="by">July 5, 2018</div>
-                        <div class="view-site">
-                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <a target="_blank" href="http://www.gooogle.com">
-                        <img src="img/rexxu Logo.jpg">
-                    </a>
-                    <div class="description">
-                        <div class="title">Fake Project</div>
-                        <div class="by">July 5, 2018</div>
-                        <div class="view-site">
-                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <a target="_blank" href="http://www.gooogle.com">
-                        <img src="img/rexxu Logo.jpg">
-                    </a>
-                    <div class="description">
-                        <div class="title">Fake Project</div>
-                        <div class="by">July 5, 2018</div>
-                        <div class="view-site">
-                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div><!-- container -->
-
-		</main>
 
 		<footer>
 			<p id="about">Rex Xu, 2020 UC Berkeley</p>
