Change name for css file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   	<!-- css -->
   	<link rel="stylesheet" href="css/style.css">
 
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   	<link rel="shortcut icon" href="img/logo black.jpg">
 </head>
 
@@ -38,7 +38,9 @@
 
 		</header>
 
+    <main>
 
+    </main>
 
 		<footer>
 			<p id="about">Rex Xu, 2020 UC Berkeley</p>
