--- a/profile.html
+++ b/profile.html
@@ -28,15 +28,102 @@
 
 		<header>
 			<div id="logo">
-			     <img src="img/rexxu Showcase.png">
+				<img src="img/rexxu Showcase.png">
 			</div>
 
-			<div id="subheader">About page is under construction</div>
-      <div id="subheader">Contact: rexhoushunxu@gmail.com</div>
+			<div id="subheader">Rex Hou Shun Xu</div>
 		</header>
 
 		<main>
             <div class="container">
+
+                <a target="_blank" href="http://www.gooogle.com" class="button">Learn More</a>
+                <div class="sectiontitle">Projects</div>
+
+                <div class="item">
+                    <a target="_blank" href="http://www.gooogle.com">
+                        <img src="img/rexxu Logo.jpg">
+                    </a>
+                    <div class="description">
+                        <div class="title">Fake Project</div>
+                        <div class="by">July 5, 2018</div>
+                        <div class="view-site">
+                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <a target="_blank" href="http://www.gooogle.com">
+                        <img src="img/rexxu Logo.jpg">
+                    </a>
+                    <div class="description">
+                        <div class="title">Fake Project</div>
+                        <div class="by">July 5, 2018</div>
+                        <div class="view-site">
+                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <a target="_blank" href="http://www.gooogle.com">
+                        <img src="img/rexxu Logo.jpg">
+                    </a>
+                    <div class="description">
+                        <div class="title">Fake Project</div>
+                        <div class="by">July 5, 2018</div>
+                        <div class="view-site">
+                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div><!-- container -->
+
+            <div class="container">
+
+                <a target="_blank" href="http://www.gooogle.com" class="button">Learn More</a>
+                <div class="sectiontitle">Projects</div>
+
+                <div class="item">
+                    <a target="_blank" href="http://www.gooogle.com">
+                        <img src="img/rexxu Logo.jpg">
+                    </a>
+                    <div class="description">
+                        <div class="title">Fake Project</div>
+                        <div class="by">July 5, 2018</div>
+                        <div class="view-site">
+                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <a target="_blank" href="http://www.gooogle.com">
+                        <img src="img/rexxu Logo.jpg">
+                    </a>
+                    <div class="description">
+                        <div class="title">Fake Project</div>
+                        <div class="by">July 5, 2018</div>
+                        <div class="view-site">
+                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <a target="_blank" href="http://www.gooogle.com">
+                        <img src="img/rexxu Logo.jpg">
+                    </a>
+                    <div class="description">
+                        <div class="title">Fake Project</div>
+                        <div class="by">July 5, 2018</div>
+                        <div class="view-site">
+                            <a target="_blank" href="http://www.gooogle.com">View Site</a>
+                        </div>
+                    </div>
+                </div>
 
             </div><!-- container -->
 
