--- a/testing.html
+++ b/testing.html
@@ -15,10 +15,9 @@
   	<title>rexxu Showcase</title>
 
   	<!-- css -->
-  	<link rel="stylesheet" href="css/base.css">
   	<link rel="stylesheet" href="css/style.css">
 
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   	<link rel="shortcut icon" href="img/logo black.jpg">
 </head>
 
@@ -27,20 +26,21 @@
 	<div class="wrapper">
 
 		<header>
-			<div id="logo">
-			     <img src="img/rexxu Showcase.png">
-			</div>
+			<a href="#" id="logo"></a>
+      <nav>
+        <a href="#" id ="menu-icon"></a>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
 
-			<div id="subheader">About page is under construction</div>
-      <div id="subheader">Contact: rexhoushunxu@gmail.com</div>
 		</header>
 
-		<main>
-            <div class="container">
+    <main>
 
-            </div><!-- container -->
-
-		</main>
+    </main>
 
 		<footer>
 			<p id="about">Rex Xu, 2020 UC Berkeley</p>
