--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   	<link rel="stylesheet" href="css/style.css">
 
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-  	<link rel="shortcut icon" href="img/logo black.jpg">
+  	<link rel="shortcut icon" href="img/Logo.jpg">
 </head>
 
 <body>
@@ -31,8 +31,7 @@
 			     <img src="img/rexxu Showcase.png">
 			</div>
 
-			<div id="subheader">About page is under construction</div>
-      <div id="subheader">Contact: rexhoushunxu@gmail.com</div>
+			<div id="subheader">About page is under construction<br>Contact: rexhoushunxu@gmail.com</div>
 		</header>
 
 		<main>
